--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>eureka</finalName>
 	</build>
 	<repositories>
 		<repository>
